# syftbox-enclave

./: justfile  main.py  pyproject.toml  run.sh  utils.py
app/: main.py  models.py  permissions.py  requirements.txt
examples/CropAvg/: config.yaml
examples/CropAvg/code/: entrypoint.py
experimental/Encryption/: 5a0c7c32-f9b6-4d74-bdbf-42547004c2b4.enc  Encryption.ipynb  organic.enc
experimental/Encryption/Temp/: config.yaml
experimental/Encryption/keys/: private_key.pem  public_key.pem
experimental/YamlTest/: Yaml-test.ipynb
notebooks/RDS-Enclave/: DO.ipynb  DO1.ipynb  DO2.ipynb  DS.ipynb  Enclave.ipynb  utils.py
notebooks/RDS-Enclave-E2E/: DO1.ipynb  DO2.ipynb  DS.ipynb
notebooks/RDS-Enclave/code/: entrypoint.py
notebooks/RDS-Enclave/datasets/: README.md
notebooks/RDS-Enclave/datasets/mock/: crop_stock_data.csv
notebooks/RDS-Enclave/datasets/private/: crop_stock_data.csv
server/: main.py
server/static/: style.css
server/templates/: index.html
src/syftbox_enclave/: __init__.py  client.py  orchestra.py
